Refactor unit and agenda checks to service classes (#3520)
* Refactor unit and agenda checks to service classes

Moved isPlayerElected and getTilesOfPlayersSpecificUnits logic from ButtonHelper to new service classes (IsPlayerElectedService, CheckUnitContainmentService). Updated all usages across helpers and resolvers to use the new service methods. Renamed ColonialButtonHelper to ColonialButtonHandler for consistency. Cleaned up imports and improved code organization.

* F

* F

* Update IsPlayerElectedService.java

* Refactor isPlayerElected logic and add unit tests

Refactored IsPlayerElectedService to use allMatch instead of findFirst for law info checks, improving clarity and correctness. Added comprehensive unit tests for isPlayerElected, covering various scenarios including null player, disabled laws, and matching by faction.

* Update IsPlayerElectedService.java