@@ -86,7 +86,7 @@ class JimboButtons {
                                 TRANSFORM_TRANSLATE_4,
                                 TRANSFORM_TRANSLATE_5);
                     case JimboConst.metaAction -> List.of(MAIN_PAGE, META_SYMMETRY_ADD, META_SYMMETRY_REMOVE);
-                    default -> List.of();
+                    default -> Collections.emptyList();
                 };
         return new ArrayList<>(buttons);
     }
